--- a/pagine/apostolo.html
+++ b/pagine/apostolo.html
@@ -39,7 +39,7 @@ per tutte le funzioni
 
 
 
-    <h3><a href="../index.html">TORNA ALLA HOME </a></h3></body
+    <h3><a href="../index.html">TORNA ALLA HOME </a></h3>
 
 </center>
 </body>
